package com.angadiq.ecommerce.entity;

import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Entity

@Table(name = "addresses")

@Getter

@Setter

@NoArgsConstructor

@AllArgsConstructor

public class Address {

    @Id

    @GeneratedValue(

            strategy = GenerationType.IDENTITY

    )

    private Long id;

    private String fullName;

    private String phone;

    private String street;

    private String city;

    private String state;

    private String country;

    private String postalCode;

    @ManyToOne

    @JoinColumn(

            name = "user_id"

    )

    private User user;

}
